v0.0.8

* [BGBUILD-130] Add virtio support out of the box

v0.0.7

* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.0.6

* [BGBUILD-87] Set default filesystem to ext4 for Fedora 13+

v0.0.5

* [BGBUILD-82] Root password not set when selinux packages are added

v0.0.4

* Rebuilding for RPM

v0.0.3

* [BGBUILD-49] Not able to log in to CentOS AMIs
* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.2

* [BGBUILD-45] system-config-securitylevel-tui package is required on RHEL/CentOS 5

v0.0.1

* First release
